syntax = "proto3";

package authz;

option go_package = "./pkg/authz/pb";

service AuthzService {
    rpc VerifyRole(VerifyRoleRequest) returns (VerifyRoleResponse);
}

message VerifyRoleRequest {
    string user_id = 1;
    string role = 2;
}

message VerifyRoleResponse {
    bool is_authorized = 1;
}
